<resources>
    <string name="app_name">Twotr</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="sign_in">Sign In</string>
    <string name="title_activity_signup">SignupActivity</string>
    <string name="title_activity_signin">SigninActivity</string>
    <string name="sign_up">Sign Up</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="password">Password</string>
    <string name="username">Email(Username)</string>
    <string name="student">Student</string>
    <string name="tutor">Tutor</string>
    <string name="forget_your_password">Forget your Password?</string>
    <string name="title_activity_home_page">HomePage</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="referal_code">Referal Code (Optional)</string>
    <string name="create_subject">Create Subject</string>
    <string name="type_and_choose_subject">Type and Choose Subject</string>
    <string name="title_activity_addmaptutor">Map</string>
    <string name="title_activity_schedule_start">ScheduleStart</string>
    <string name="guest">Guest</string>
    <string name="iamnew">I am New I`ll</string>
    <string name="title_activity_schedule_detail_page">ScheduleDetailPAge</string>
    <string name="title_activity_sample_one">SampleOne</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="title_activity_profile__page">Profile_Page</string>
    <string name="title_activity_profile__edit__personal">Profile_Edit_Personal</string>
    <string name="title_activity_profile__edit__educational">Profile_Edit_Educational</string>
    <string name="title_activity_profile__edit__professional">Profile_Edit_Professional</string>
    <string-array name = "spinner_item">
        <item>Male</item>
        <item>Female</item>

    </string-array>
</resources>
