<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.twotr.twotr.globalpackfiles.SignupActivity"
    tools:layout_editor_absoluteY="25dp"
>


    <ImageButton
        android:id="@+id/signup_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="28dp"
        android:background="@drawable/ic_back_page"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.069"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:padding="5dp"

        android:layout_marginStart="8dp"
        android:layout_marginTop="68dp"
        android:fontFamily="@font/montserrat"
        android:text="TWOTR"
        android:textAlignment="center"
        android:textColor="@color/colorAccent"
        android:textSize="28sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signup_back" />

    <Button
        android:id="@+id/button3"
        android:layout_width="136dp"
        android:layout_height="40dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:background="@color/buttonColorPrimary"
        android:fontFamily="@font/montserrat"
        android:text="@string/student"
        android:textAlignment="center"
        android:textAllCaps="false"
        app:layout_constraintBottom_toTopOf="@+id/username_signup"
        app:layout_constraintEnd_toStartOf="@+id/button4"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/username_signup"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/button4"
        android:layout_width="136dp"
        android:layout_height="40dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="8dp"
        android:background="@color/buttonColorSecondary"
        android:fontFamily="@font/montserrat"
        android:text="@string/tutor"
        android:textAlignment="center"
        android:textAllCaps="false"
        app:layout_constraintBottom_toTopOf="@+id/username_signup"
        app:layout_constraintEnd_toEndOf="@+id/username_signup"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/username_signup"
        android:layout_width="304dp"
        android:layout_height="55dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="76dp"
        android:background="@drawable/edittext_unselected"
        android:ems="10"
        android:fontFamily="@font/montserrat"
        android:hint="@string/username"
        android:inputType="textPersonName"
        android:padding="10dp"
        android:singleLine="true"
        android:textColorLink="@color/colorAccent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />


    <EditText
        android:id="@+id/pass_signup"
        android:layout_width="304dp"
        android:layout_height="55dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/edittext_unselected"
        android:ems="10"
        android:fontFamily="@font/montserrat"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:padding="10dp"
        app:layout_constraintEnd_toEndOf="@+id/username_signup"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/username_signup"
        app:layout_constraintTop_toBottomOf="@+id/username_signup" />

    <EditText
        android:id="@+id/confpass_signup"
        android:layout_width="304dp"
        android:layout_height="55dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/edittext_unselected"
        android:ems="10"
        android:fontFamily="@font/montserrat"
        android:hint="@string/confirm_password"
        android:inputType="textPassword"
        android:padding="10dp"
        app:layout_constraintEnd_toEndOf="@+id/pass_signup"
        app:layout_constraintStart_toStartOf="@+id/pass_signup"
        app:layout_constraintTop_toBottomOf="@+id/pass_signup" />

    <Button
        android:id="@+id/singup_buton_true"
        android:layout_width="190dp"
        android:layout_height="40dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="52dp"
        android:background="@color/colorPrimary"
        android:fontFamily="@font/montserrat"
        android:text="@string/sign_up"
        android:textAllCaps="false"
        android:textColor="@android:color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/confpass_signup" />


</android.support.constraint.ConstraintLayout>
